@@ -7,6 +7,7 @@ import org.springframework.data.domain.Sort;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BaseController {
     protected Pageable getPageable(int pageNumber, int pageSize,
@@ -14,9 +15,8 @@ public class BaseController {
         Sort.Direction direction = sortDirection.equalsIgnoreCase("asc") ?
                 Sort.Direction.ASC : Sort.Direction.DESC;
         List<Sort.Order> orders = new ArrayList<>();
-        Arrays.stream(sort).toList().forEach(field -> {
+        Arrays.stream(sort).collect(Collectors.toList()).forEach(field -> {
             Sort.Order order = new Sort.Order(direction, field);
-            orders.add(order);
         });
         return PageRequest.of(pageNumber, pageSize, Sort.by(orders));
     }
